fix card spacing

--- a/styles.css
+++ b/styles.css
@@ -51,17 +51,12 @@ body {
 }
 
 .scrollCard {
-    /*border-style: solid;
-    border-width: 4px 4px 4px 4px;
-    border-color: white;*/
     border-radius: 0.3rem;
-    /*box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;*/
     margin-left: 1em;
     margin-top: 15px;
-    /*background-color: #31103d;*/
     background-color: rgb(241, 241, 241);
     display: grid;
-    grid-template-columns: .4fr 2fr .4fr;
+    grid-template-columns: .6fr 2fr .4fr;
     align-items: center;
 
 }
